# Chord

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
cache/: tool_cache.db
chord/: agent.py  testing_agent.py
data/: langchain_tool_map.json  malicious_tool_arguments.json  malicious_tools.json  queries.json  query.json  tool_filter_malicious_tools.json  tools_in_defense  victim_tools
demo/: attacker_server.py  dynamic_tool_creation.py  semantic_targeted_hooking.py  semantic_untargeted_hooking.py  syntax_format_hooking.py
evaluation/: eval_defense.py  eval_langchain_tools.py
results/defense/airgap/: airgap_predecessor  airgap_successor
results/defense/pi_detector/: false_cases  pi_detector_predecessor  pi_detector_successor  predecessor_labels.json  successor_labels.json
results/defense/spotlight/: spotlight_successor
results/defense/tool_filter/: tool_filter_predecessor  tool_filter_successor
results/langchain_tools/: predecessor_harvest
src/: agent.py  llama_index_testing_agent.py  testing_agent.py
