[project]
name = "chord-ndss-artifact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.23",
    "langchain-anthropic==0.3.0",
    "langchain-cohere==0.3.1",
    "langchain-community==0.3.21",
    "langchain-core==0.3.51",
    "langchain-experimental==0.3.2",
    "langchain-google-community==2.0.2",
    "langchain-ollama==0.2.0",
    "langchain-openai==0.2.2",
    "langchain-text-splitters==0.3.8",
    "langcodes==3.5.0",
    "langgraph==0.2.34",
    "langgraph-checkpoint==2.0.0",
    "llama-index==0.11.19",
    "llama-index-tools-arxiv==0.2.0",
    "llama-index-tools-brave-search==0.2.0",
    "llama-index-tools-code-interpreter==0.2.0",
    "llama-index-tools-cogniswitch==0.2.0",
    "llama-index-tools-exa==0.2.0",
    "llama-index-tools-google==0.2.0",
    "llama-index-tools-graphql==0.2.0",
    "llama-index-tools-jina==0.0.1",
    "llama-index-tools-notion==0.2.0",
    "llama-index-tools-openai-image-generation==0.3.0",
    "llama-index-tools-openapi==0.2.0",
    "llama-index-tools-python-file==0.2.0",
    "llama-index-tools-requests==0.2.0",
    "llama-index-tools-tavily-research==0.2.0",
    "llama-index-tools-text-to-image==0.2.0",
    "llama-index-tools-weather==0.2.1",
    "llama-index-tools-wikipedia==0.2.0",
    "llama-index-tools-wolfram-alpha==0.2.0",
    "llama-index-tools-yahoo-finance==0.2.0",
    "llama-index-tools-yelp==0.2.0",
    "llama-index-tools-duckduckgo==0.2.1",
    "matplotlib==3.10.7",
    "youtube-search>=2.1.2",
]